# collabovid

./: .dockerignore  .gitignore  README.md  data_update_script.py  extract.py  faq.md  manage.py  manage_postgres.py  models.txt  requirements.txt  scrape.dockerignore  search.dockerignore  web.dockerignore
collabovid-shared/: MANIFEST.in  Makefile  README.rst  setup.cfg
collabovid-shared/collabovid_settings/: aws_settings.py  elasticsearch_settings.py  export_settings.py  installed_apps.py  postgres_settings.py  service_settings.py  tasks_settings.py  using_elasticsearch.py  volumes_settings.py
collabovid-shared/collabovid_settings/development/: aws_settings.py  database_settings.py  elasticsearch_settings.py  export_settings.py  service_settings.py  sqlite_settings.py  tasks_settings.py  volumes_settings.py
collabovid-shared/collabovid_settings/test/: aws_settings.py
collabovid-shared/collabovid_statistics/: paper_statistics.py  query_statistics.py
collabovid-shared/data/: data_export.py  documents.py  models.py  paper_db_insert.py  statistics.py  task_data_export.py
collabovid-shared/data/fixtures/: db-202003281528.json  db-202003282337.json  lit-covid-categories.json
collabovid-shared/data/migrations/: 0001_initial.py  0002_author_first.py  0003_auto_20200328_0057.py  0004_remove_author_first.py  0005_auto_20200328_1511.py  (+68 more)
collabovid-shared/geolocations/: geoname_db.py  location_modifier.py
collabovid-shared/storage/: custom_storage.py
collabovid-shared/tasks/: admin.py  colors.py  definitions.py  load.py  models.py  task_runner.py  urls.py  views.py
(+667 files in other folders)
