[metadata]
name = collabovid-shared
version = 0.1
description = Shared models for Collabovid apps
long_description = file: README.rst
url = https://www.collabovid.org/
author = Jonas Dippel, Yannic Lieder, Eike Niehs, Michael Perk, Moritz Pfister
author_email = info@collabovid.org
license = GPL-3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0.4
    Intended Audience :: Developers
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    Django==3.0.7
    kubernetes==11.0.0
    django-storages==1.9.1
    psycopg2-binary==2.8.5
    boto3==1.13.10
    termcolor==1.1.0

